styles/style.css
body {
  top: 0px;
  left: 0px;
  color: #FFF;
  height: 100%;
  width: 100%;
  margin: 0px;
  font-family: 'Open Sans', sans-serif;
}

@media all and (device-width:768px) and (device-height:1024px) and (orientation:portrait){body{height:1024px}
}
@media all and (device-width:768px) and (device-height:1024px) and (orientation:landscape){body{height:768px}
}
@media screen and (device-aspect-ratio:40/71){body{height:500px}
}

h1{
  margin:0;
  padding:0;
  font-size:5rem;
  font-weight:300;
  line-height:1.2;
  font-family: 'Copse', serif;
}

@media all and (min-width:768px){
  h1{font-size:5rem}
}
@media all and (min-width:1024px){
  h1{font-size:6rem}
}

h2{
  margin:0;
  padding:0;
  display:block;
  font-size:1.8rem;
  font-weight:300;

}
@media all and (max-width:768px){
  h2{
    word-wrap: break-word;
  }
}

@media all and (min-width:768px){
  h2{font-size:2rem}
}
@media all and (min-width:1024px){
  h2{font-size:2.2rem}
}

p{
  font-size:1.4rem;
  font-weight:100
}

@media all and (min-width:768px){
  p{font-size:1.6rem}
}
@media all and (min-width:1024px){
  p{font-size:1.8rem}
}

.section {
  position: relative;
  overflow: hidden;
  max-height: none;
}

.section:before {
  left: 0px;
  top:0px;
  position: absolute;
  width: 100%;
  height: 100%;
  background-size: contain;
  box-sizing: border-box;
}

.grid {
  display: flex;
  flex-direction: column;
  min-height: 100%
  text-align: center;
}

.grid:after {
    content: " ";
    display: block;
    clear: both;
}

.content {
  text-align: center;
  display: flex;
  justify-content: center;
  position: relative;
  height: 100%;
  align-items:center;
  flex-wrap: wrap;
  flex-direction: column;
}

.content-background {
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  z-index: -1;
  overflow: hidden;
  background: #4ABDAC;
}

.container {
  position: relative;
  height: 100vh;
  align-items:center;
  background-size: cover;
  overflow: hidden;
  width: 100%;
  padding: 0px;
  top:0px;
  background: #4ABDAC;
}

/*icons*/
.icon {
  margin: 36px 14px;
  height: 36px;
}

.icon:hover {
  -webkit-animation-name: fadeTo;
  animation-name: fadeTo;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-transition: all 1s ease;
  transition: all 1s ease;
}

/*RESUME*/

.resumeElement {
    height: 85px;
    float: left;
    clear: both;
    margin: 5px;
}

.bar {
  padding: 0px 20px 0px 20px;
  white-space: nowrap;
  text-overflow: no-wrap;
  width: 0px;
  float: left;
  text-align: left;
}

.resumeElement .bar p, h3, h4 {
  margin: 0px;
  /*display: inline;*/
}

.resumeElement .logo {
  width: 46px;
  height: 46px;
  display: inline-block;
  position: relative;
  float: left;
  display: none;
}

.resumeElement .duration {
  display: inline-block;
  margin-left: 2px;
  margin-top: 24px;
  color: #3e337d;
  display: none;
}

.bar:after {
  content: '';
  display: block;
  height: 4px;
  width: 100%;
  margin: 0 auto;
}

.education.bar:after {
  background: #fc4a14;
}

.experience.bar:after  {
  background: #F7B733;
}

.skills.bar:after {
  background: #4ABDAC;
}

.animated {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

/*ROTATE AROUND Y AXIS*/
@keyframes rotateY {
  from { transform: rotateY(180deg);}
  to {transform: rotateY(0deg);}
}

.rotateY {
  -webkit-transform-origin: top center;
  transform-origin: top center;
  -webkit-animation-name: rotateY;
  animation-name: rotateY;
}

#period {
  display:inline-block;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  background-color: #3e337d;
  position: absolute;
  margin-top: 25px;
  margin-left: 5px;
  animation-iteration-count: infinite;
}

.fadeIn {
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-transition: all 1s ease;
  transition: all 1s ease;
}

@keyframes fadeIn {
  from {opacity: 0}
  to {opacity: 1}
}

.fadeOut {
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
   -webkit-transition: all 1s ease;
  transition: all 1s ease;
}

@keyframes fadeOut {
  from {opacity: 1}
  to {opacity: 0}
}

@keyframes fadeTo {
  from {opacity: 1}
  to {opacity: .5}
}

/* sections */

#main {
  top: 0px;
  height: 100%;
  background-color: #4ABDAC;
}

#resume {
  min-height: 100%;
  background-color: #4155b4;
}

#work {
  min-height: 100%;
  background-color: #3e337d;
}

